# avr-pico-programmer

./: README.md
client/: package.json  program.js
pico/: CMakeLists.txt  avrprog.c  avrprog.h  main.c
